Kubernetes/yml/Addon-Function/NetworkPolicy/network-eg/two-container-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: two-container
spec:
  containers:
  - name: web
    image: nginx
    ports:
    - containerPort: 80
      hostPort: 80
  - name: centos
    image: centos
    command: ["/bin/sh", "-c", "while : ;do curl http://localhost:80/; sleep 30; done"]
