Kubernetes/yml/Addon-Function/NetworkPolicy/network-eg/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-networkpolicy
spec:
  podSelector:
    matchLabels:
      run: nginx-pod
  ingress:
  - from:
	# the pods which are labeled test=inbound can be allowed
    - podSelector:
        matchLabels:
          test: inbound
